# insights

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .prettierrc.json  .releaserc  Dockerfile  MANIFEST.in  README.md  commitlint.config.cjs  crowdin.yml  flake8  license.txt  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/helpers/: enrich_release_notes.sh  install.sh  mariadb.json  update_pot_file.sh
.github/workflows/: auto-release.yml  build.yml  ci.yml  compat-matrix.yml  frontend-build.yml  generate-pot-file.yml  lint.yml  make-release-pr.yml  playwright.yml  release.yml  server-tests.yml
analytics/: hooks.py  patches.txt
analytics/api/: __init__.py
analytics/config/: desktop.py  docs.py
analytics/patches/: add_last_execution_field.py  add_position_key_to_filter.py
analytics/public/frontend/: index.html
analytics/public/js/: analytics.bundle.js  query_field_quick_entry.js
docker/: docker-compose.yml  init.sh
frappe_analytics/: hooks.py  modules.txt
frappe_analytics/api/: queries.py
frappe_analytics/config/: desktop.py  docs.py
frappe_analytics/public/js/: query_field_quick_entry.js
frontend/: .eslintrc.json  .prettierrc.json  components.d.ts  cypress.config.js  index.html  index_v2.html  index_v3.html  package-lock.json  package.json  playwright.config.js  postcss.config.js  posthog.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.mjs
frontend/cypress/plugins/: index.js
frontend/cypress/support/: commands.js  component.js  e2e.js
frontend/patches/: frappe-ui+0.1.142.patch
frontend/src/: App.vue  global.d.ts  globals.js  index.css  index.scss  main.js  router.js  router.ts  socket.js
frontend/src/analysis/: Analysis.vue  useAnalysis.ts  useAnalysisChart.ts  useAnalysisDashboard.ts  useAnalysisQuery.ts
frontend/src/api/: index.ts  whitelistedMethods.ts
frontend/src/components/: AlertDialog.vue  AppShell.vue  AsyncComponent.vue  Autocomplete.vue  BasePage.vue  Breadcrumbs.vue  ColumnHeader.vue  ColumnMenu.vue  ColumnMenuCountIf.vue  ColumnPicker.vue  ColumnPickerSearch.vue  ColumnSearch.vue  CommandPalette.vue  ConfirmDialog.vue  ContentEditable.vue  DashboardCard.vue  DatePicker.vue  DialogWithSidebar.vue  DraggableList.vue  DraggableListItemMenu.vue  DraggableResizeable.vue  EditablePageTitle.vue  ExpressionHelp.vue  FilterNode.vue  FilterPicker.vue  FilterPickerSearch.vue  FilterSearch.vue  FilterTree.vue  FrappeAnalyticsLogo.vue  Grid.vue  HelpDialog.vue  ImportDialog.vue  List.vue  (+38 more)
frontend/src2/: App.vue  globals.ts  index.css  main.ts  router.ts  session.ts  socket.ts  telemetry.ts  translation.ts  users.ts
frontend/tests/: dashboard_page.spec.js  login.spec.js  query_builder.spec.js  setup-wizard.spec.js
insights/: __init__.py  cache_utils.py  constants.py  coverage.py  decorators.py  hooks.py  migrate.py  modules.txt  overrides.py  patches.txt  permissions.py  utils.py
insights/ai/: __init__.py  client.py  debug.py  generate_query.py  operation_parser.py  prompt_builder.py  prompts.py  query_validator.py  schemas.py  session_manager.py  validator.py
insights/api/: __init__.py  ai.py  ai_query.py  alerts.py  chat_bot_ai.py  copilot.py  dashboards.py  data_sources.py  data_store.py  embed_link.py  home.py  join_graph.py  maps.py  marketplace.py  notebooks.py  onboarding.py  openai.py  permissions.py  public.py  queries.py  setup.py  shared.py  subscription.py  telemetry.py  templates.py  user.py  workbook_snapshots.py  workbooks.py
insights/config/: desktop.py  docs.py
insights/fixtures/: insights_data_source.json  insights_data_source_v3.json  insights_notebook.json  insights_team.json  role.json
insights/insights/: query_utils.py
insights/locale/: ar.po  bs.po  cs.po  da.po  de.po  eo.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  main.pot  my.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sr_CS.po  sv.po  th.po  tr.po  vi.po  zh.po
insights/patches/: add_column_row_to_result.py  add_last_execution_field.py  add_position_key_to_filter.py  add_roles.py  backfill_query_hash.py  backfill_query_references.py  check_legacy_v2_data_before_upgrade.py  convert_duration_to_float.py  create_query_tables.py  enable_alerts.py  enable_data_store.py  fix_select_options_after_rename.py  fix_table_link_names.py  make_filter_links.py  make_query_tables.py  migrate_dashboard_charts.py  migrate_warehouse_tables_to_schemas.py  modify_dashboard_layout.py  modify_join_condition.py  normalize_workbook.py  refactor_dashboard_filter.py  refactor_dashboard_item.py  refresh_tables.py  rename_column_type.py  rename_count_column_name.py  rename_data_source_options.py  rename_data_to_config.py  rename_doctypes.py  rename_like_to_contains.py  rename_target_column_field.py  rename_visualization.py  replace_demo_data_source.py  replace_pivot_column_with_label.py  reset_query_filters.py  show_support_login_message.py  store_queries.py
insights/setup/: __init__.py  demo.py  demo_dashboards.json  demo_queries.json  insights_demo_data.duckdb  sample_workbook.json  setup_wizard.py  test_demo_data.tar  test_demo_setup.py  test_sqlite_db.sqlite.tar
insights/templates/: alert.html
insights/tests/: test_basic_workflow.py  test_permissions.py  test_query_locking.py  utils.py
insights/www/: insights.py  insights_v2.py  insights_v3.html
ui/: index.html  package.json
ui/src/: App.vue  router.js
(+1261 files in other folders)
