[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "insights"
authors = [{name = "Frappe Technologies Pvt. Ltd.", email = "developers@frappe.io"}]
description = "Open Source Business Intelligence Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0-dev",
    # Data Analysis and Processing
    "pandas~=2.1.4",
    "numpy~=1.26.2",
    "scipy~=1.11.4",
    "scikit-learn~=1.3.2",
    # Database Connectors
    "sqlalchemy~=2.0.23",
    "pymongo~=4.6.0",
    "elasticsearch~=8.11.0",
    "clickhouse-connect~=0.6.23",
    # Data Visualization
    "plotly~=5.17.0",
    "matplotlib~=3.8.2",
    "seaborn~=0.13.0",
    # Data Export
    "openpyxl~=3.1.2",
    "xlrd~=2.0.1",
    "xlwt~=1.3.0",
    "python-docx~=1.1.0",
    "reportlab~=4.0.7",
    # Utilities
    "python-dateutil~=2.8.2",
    "validators~=0.22.0",
    "cachetools~=5.3.2",
    # Docker specific additions
    "gevent~=23.9.1",
    "psycopg2-binary~=2.9.9",
    "supervisor~=4.2.5",
    "gunicorn~=21.2.0",
]

[project.optional-dependencies]
dev = [
    "coverage~=7.3.2",
    "Faker~=20.1.0",
    "hypothesis~=6.88.4",
    "unittest-xml-reporting~=3.2.0",
    "jupyter~=1.0.0",
]

[project.urls]
Homepage = "https://frappe.io/insights"
Documentation = "https://docs.frappe.io/insights"
Repository = "https://github.com/alazab-group/insights"
Changelog = "https://github.com/alazab-group/insights/releases"

[project.scripts]
insights = "insights.utils.bench_helper:main"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - too broad
    "B018", # useless expression
    "B023", # function definition in loop
    "B904", # raise ... from e
    "E501", # line too long
    "F401", # module imported but unused
    "F403", # star import used
    "F405", # name may be undefined due to star import
    "RUF012", # mutable class attributes
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.coverage.run]
source = ["insights"]
omit = [
    "*/tests/*",
    "*/commands/*",
    "*/patches/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
